# design_patterns_agent

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.crat  LICENSE  README.md  TESTING.md  run_crat_test.sh  run_stdlib_sync_test.sh  run_stdlib_test.sh
reports/: bfs_vs_semantic_search_comparison.md
runs/claude-sonnet-4-20250514_20260310_073357/: analysis_review.md  improvement_plan.md  invariants.jsonl  progress.jsonl  report.md
runs/claude-sonnet-4-20250514_20260310_194617/: progress.jsonl
runs/claude-sonnet-4-20250514_20260310_195036/: progress.jsonl
runs/claude-sonnet-4-20250514_20260310_195449/: progress.jsonl
runs/claude-sonnet-4-20250514_20260310_195953/: progress.jsonl
runs/claude-sonnet-4-20250514_20260310_200144/: progress.jsonl  report.md
runs/claude-sonnet-4-20250514_20260310_200327/: progress.jsonl
runs/crat_batch_20260319_181004/: top10_typestate_invariants.md
runs/gpt-5_20260310_201220/: progress.jsonl
runs/gpt-5_20260310_202104/: invariants.jsonl  progress.jsonl
runs/gpt-5_20260310_202320/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_20260310_205741/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_110347_bfs_sync/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_121135_ss_sync/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_133835_bfs_io/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_133853_bfs_net/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_133856_ss_io/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_134013_ss_net/: invariants.jsonl  progress.jsonl  report.md  token_usage.json
runs/gpt-5_2_20260311_181446_bfs/: progress.jsonl  report.md  token_usage.json
scripts/: consolidate_reports.py  copy_from_docker.sh  run_batch_analysis.sh  run_tests.sh
src/: lib.rs  main.rs
src/agent/: mod.rs  progress.rs
src/cli/: config.rs  mod.rs
src/detection/: evidence.rs  linear_types.rs  (+5 more)
tests/: integration_test.rs
tools/: build_c_dylib.sh  jq-format-json.sh  outwriter.py  test_updater.py
tools/cando/: Cargo.toml
tools/cando/src/: lib.rs  main.rs
tools/cando/tests/: conduct.rs  extended_macro.rs  simple_macro.rs  test_case.rs
tools/cando/tests/test_data/mock_candidate_lib/test_case/src/: lib.c
tools/cando/tests/test_data/mock_candidate_lib/test_vectors/: 2.json
tools/cando2/: Cargo.toml
tools/cando2/src/: lib.rs  main.rs
tools/cando2/tests/: conduct.rs  extended_macro.rs  simple_macro.rs  test_case.rs
tools/cando2/tests/test_data/mock_candidate_lib/test_case/: make.sh
tools/cando2/tests/test_data/mock_candidate_lib/test_vectors/: 1.json  3.json
(+734 files in other folders)
