[package]
name = "cando"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
argh = "0.1.13"
getrandom = "0.3.3"
libloading = "0.8.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision", "float_roundtrip", "preserve_order"] }
