[package]
name = "cando2"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"

[lints.rust]
unexpected_cfgs = "allow"

[features]
default = ["full"]
full = ["dep:argh", "dep:getrandom", "dep:serde", "dep:serde_json"]

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
libloading = "0.8.7"

# Optional
argh = { version = "0.1.13", optional = true }
getrandom = { version = "0.3.3", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { optional = true, version = "1.0.140", features = ["arbitrary_precision", "float_roundtrip", "preserve_order"] }
